# AgroSenseBot

./: .gitignore  README.md
agrosensebot_fake_canopen_nodes/: CMakeLists.txt  package.xml
agrosensebot_fake_canopen_nodes/config/: fake_FAN.dcf
agrosensebot_fake_canopen_nodes/include/: canopen_slave_node.h  ros2_bridge_node.h
agrosensebot_fake_canopen_nodes/launch/: fake_FAN_canopen_node.launch.py
agrosensebot_fake_canopen_nodes/scripts/: pub_motor_drive.py
agrosensebot_fake_canopen_nodes/src/: ros2_bridge_node.cpp
asb_canopy_spraying_task/: CMakeLists.txt  README.md  package.xml
asb_canopy_spraying_task/launch/: canopy_mapping.launch.xml  canopy_spraying_task.launch.xml  canopy_volume_estimation.launch.xml  execute_task.launch.xml  execute_task_sm.launch.xml  global_plan_viz.launch.xml  spray_regulation.launch.xml  spraying_task_plan_navigator.launch.xml  task_plan_maker.launch.xml
asb_canopy_spraying_task/scripts/: control_mode_manager.py  global_plan_viz.py  navigation_manager.py  plan_manager.py  spraying_manager.py  spraying_regulator.py  spraying_task_plan.py  spraying_task_plan_executor.py  spraying_task_plan_maker.py  spraying_task_plan_navigator.py  spraying_task_sm.py
asb_canopy_spraying_task/src/: canopy_volume_estimation.cpp
asb_control_system_status_controller/: CHANGELOG.rst  CMakeLists.txt  asb_control_system_status_plugin.xml  package.xml
asb_control_system_status_controller/doc/: userdoc.rst
asb_control_system_status_controller/src/: asb_control_system_status_controller.cpp  asb_control_system_status_controller_parameter.yaml
asb_control_system_status_controller/test/: test_asb_control_system_status_controller.cpp  test_load_asb_control_system_status_controller.cpp
asb_etc/: .bash_aliases  .bashrc  CMakeLists.txt  README.md  octomap_mapping.launch.xml  package.xml  replay_octomap_mapping.launch.xml
asb_etc/files/: .bash_aliases  .bashrc
asb_etc/jupiter_notebooks/: asb_vineyard_planning.ipynb
asb_etc/launch/: scan.launch.py
asb_etc/plot_juggler/: canopy layers and nozzles commands.xml  pid_cmd_vel_odom_curvature.xml  pid_cmd_vel_odom_curvature_motors.xml  track_vel__controller__pid__nozzles.xml
asb_etc/scripts/: bag_to_dataframe.py  bags_utils.py  clicked_point_circle_publisher.py  cmd_vel_in_rpm_pub.py  cmd_vel_ramp_pub.py  compute_circle_from_clicked_points.py  compute_circle_from_interactive_markers.py  curvature_publisher.py  global_path_distance_publisher.py  plot.py  test_sub.py  zero_publisher.py
asb_gazebo/: package.xml  (+1 more)
asb_lidar_filter/: CMakeLists.txt  package.xml
asb_lidar_filter/config/: lidar_filter.yaml
asb_lidar_filter/launch/: asb_lidar_filter.launch.xml
asb_lidar_filter/src/: asb_lidar_filter.cpp  asb_lidar_filter_node.cpp
asb_nav/: CMakeLists.txt  package.xml
asb_nav/config/: gnss_odom_ekf.yaml  gnss_waypoints.yaml  nav.rviz  nav2_params_gnss_nav.yaml  robot_localization_ekf_gnss_odom.yaml
asb_nav/launch/: dual_ekf_navsat.launch.py  gnss_nav.launch.py  gnss_odom_ekf.launch.py  gnss_waypoint_follower.launch.py  joy.launch.py  map_server.launch.py  mapviz.launch.py  nav2_navigation_launch.py  nav_android.launch.py  nav_blind.launch.py  nav_dual_rtk.launch.py  nav_dual_rtk_no_lidar.launch.py  nav_gnss.launch.py  nav_gnss_no_lidar.launch.py  rviz.launch.py
asb_nav/scripts/: gnss_waypoint_follower.py  gnss_waypoint_logger.py  logged_waypoint_follower.py  nav_logged_path.py  nav_through_poses.py  odometry_brake.py  path_logger.py  static_transform_broadcaster.py
asb_nav2_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml
asb_nav2_plugins/plugins/: asb_goal_checker.cpp
asb_platform_controller/: CMakeLists.txt  asb_platform_plugin.xml  package.xml
asb_platform_controller/src/: asb_platform_controller.cpp
asb_real/: CMakeLists.txt  README.md  package.xml
asb_real/config/: gq7.yml  os0.yaml
asb_real/launch/: bringup_real.launch.py  gnss_nav_real_robot.launch.py  gq7_launch.py  microstrain_launch.py  nav_blind_real.launch.py  nav_dual_rtk_no_lidar_real.launch.py  nav_dual_rtk_real.launch.py  nav_gnss_no_lidar_real.launch.py  nav_gnss_real.launch.py  ntrip_client_launch.py  scan.launch.py
asb_ros2_control_test/: CMakeLists.txt  package.xml
asb_ros2_control_test/config/: dummy_MDL.dcf  dummy_VCU.dcf  dummy_node.dcf
asb_ros2_control_test/include/: VCU_canopen_slave_node.h  asb_system_test_node.h  motor_drive_canopen_slave_node.h
asb_ros2_control_test/launch/: test.launch.py
asb_ros2_control_test/scripts/: test_emergency_stop_cmd.py  test_fan_cmd.py  test_heartbeat.py  test_pump_cmd.py
asb_ros2_control_test/src/: VCU_canopen_slave_node.cpp  asb_system_test_node.cpp  main.cpp  motor_drive_canopen_slave_node.cpp
asb_rviz_plugins/: CMakeLists (copy).txt  CMakeLists.txt  package.xml  plugins_description.xml
asb_rviz_plugins/resources/: asb.ui  asb_orig.ui  asb_v2.0.ui  asb_v2.1.ui
asb_rviz_plugins/src/: asb_linear_dial.cpp  asb_panel.cpp  asb_widget.cpp
asb_sim/: CMakeLists.txt  README.md  package.xml
asb_sim/config/: dual_ekf_navsat_params.yaml  dummy_FAN.dcf  dummy_MDL.eds  dummy_MDR.dcf  gps_wpf_demo.mvc  nav.rviz  nav2_no_map_params.yaml
asb_sim/include/: VCU_canopen_slave_node.h  asb_system_test_node.h  motor_drive_canopen_slave_node.h
asb_sim/launch/: bringup_sim.launch.py  dual_ekf_navsat.launch.py  gazebo_gps_world.launch.py  gnss_nav_real_robot.launch.py  gnss_nav_test.launch.py  gps_waypoint_follower.launch.py  joy.launch.py  mapviz.launch.py  nav_blind.launch.py  nav_blind_sim.launch.py  nav_dual_rtk_no_lidar_sim.launch.py  nav_dual_rtk_sim.launch.py  nav_gnss_sim.launch.py  rviz.launch.py  sim.launch.py  test.launch.py
asb_sim/scripts/: android_sensors.py  fake_scan_pub.py  fan_cmd.py  gps_waypoint_logger.py  logged_waypoint_follower.py  set_control_mode_manual.py  set_control_mode_manual_to_auto.py  test_control_mode_manual_to_auto.py  test_emergency_stop_cmd.py  test_fan_cmd.py  test_heartbeat.py  test_pump_cmd.py  test_scan_pub.py
asb_task/: CMakeLists.txt  README.md  package.xml
asb_webots/: CMakeLists.txt  asb_webots_driver.xml  package.xml
(+344 files in other folders)
