<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agrosensebot_fake_canopen_nodes</name>
  <version>0.0.1</version>
  <description>Fake CANOpen nodes which send and receive PDOs on a CAN interface for AgroSenseBot</description>
  <maintainer email="enrico.piazza@polimi.it">Enrico Piazza</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>agrosensebot_canopen_bridge_msgs</depend>
  <depend>lely_core_libraries</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
